--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="mx-auto max-w-6xl px-4">
       <div class="flex items-center justify-between py-3">
         <a href="#home" class="flex items-center gap-3">
-          <img src="/asset/images/garuda.webp" alt="Logo" class="h-10 w-10 rounded-full object-cover" />
+          <img src="asset/images/garuda.webp" alt="Logo" class="h-10 w-10 rounded-full object-cover" />
           <span class="sr-only">Home</span>
         </a>
 
@@ -36,15 +36,15 @@
             <div id="heroViewport" class="absolute inset-0 overflow-hidden">
               <div id="heroTrack" class="flex h-full w-full">
                 <div class="relative min-w-full h-full">
-                  <img src="/asset/images/logohutri80.jpg" alt="HUT RI 80"
+                  <img src="asset/images/logohutri80.jpg" alt="HUT RI 80"
                       class="absolute inset-0 h-full w-full object-cover" />
                 </div>
                 <div class="relative min-w-full h-full">
-                  <img src="/asset/images/Lampung.jpeg" alt="Lampung"
+                  <img src="asset/images/Lampung.jpeg" alt="Lampung"
                       class="absolute inset-0 h-full w-full object-cover" />
                 </div>
                 <div class="relative min-w-full h-full">
-                  <img src="/asset/images/Bali.png" alt="Bali"
+                  <img src="asset/images/Bali.png" alt="Bali"
                       class="absolute inset-0 h-full w-full object-cover" />
                 </div>
               </div>
@@ -69,62 +69,62 @@
 
         <div class="mt-8 flex gap-10 overflow-x-auto pb-4">
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Jakarta.jpg" alt="Jakarta" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Jakarta.jpg" alt="Jakarta" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Jakarta</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Bandung.jpg" alt="Bandung" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Bandung.jpg" alt="Bandung" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Bandung</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Surabaya.jpg" alt="Surabaya" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Surabaya.jpg" alt="Surabaya" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Surabaya</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Bali.png" alt="Bali" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Bali.png" alt="Bali" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Bali</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Jayapura.png" alt="Jayapura" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Jayapura.png" alt="Jayapura" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Jayapura</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Medan.jpg" alt="Medan" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Medan.jpg" alt="Medan" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Medan</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Lampung.jpeg" alt="Lampung" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Lampung.jpeg" alt="Lampung" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Lampung</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Aceh.webp" alt="Aceh" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Aceh.webp" alt="Aceh" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Aceh</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Balikpapan.jpg" alt="Balikpapan" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Balikpapan.jpg" alt="Balikpapan" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Balikpapan</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Banten.jpg" alt="Banten" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Banten.jpg" alt="Banten" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Banten</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Padang.jpg" alt="Padang" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Padang.jpg" alt="Padang" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Padang</p>
           </div>
 
           <div class="flex flex-col items-center gap-4 flex-shrink-0">
-            <img src="/asset/images/Makassar.jpg" alt="Makassar" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
+            <img src="asset/images/Makassar.jpg" alt="Makassar" class="h-28 w-28 rounded-full object-cover border-2 border-slate-300" />
             <p class="text-sm">Makassar</p>
           </div>
         </div>
