--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
     <section id="portfolio">
       <div class="mx-auto max-w-6xl px-4 py-6 text-right text-xs text-slate-400">
-        Created By Naulia Adam Kuncoro
+        Build By Naulia Adam Kuncoro
       </div>
     </section>
   </main>
